--- a/templates/users.html
+++ b/templates/users.html
@@ -9,13 +9,10 @@
     {% include 'error.html' %}
 
     {% for user in users %}
-        <form method="post" action="{{ url_for('deleteUser', id=user[0]) }}">
-            <input type="hidden" name="_method" value="DELETE" />
-            <input type="submit" value="Delete user {{ user[1] }}" onclick="return check({{ users[1] }})">
-        </form>
+        <button onclick="return deleteUser('{{ user[1] }}', {{ user[0] }})">Delete user {{ user[1] }}</button>
     {% endfor %}
 
-
+    <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/users.js') }}"></script>
 </body>
 </html>
