added home button

--- a/templates/addYear.html
+++ b/templates/addYear.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% if (minYear and maxYear) %}
     <form method="post">
