--- a/templates/manageBlock.html
+++ b/templates/manageBlock.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% for block in blocks %}
         {% set blockId = block[0] %}
