--- a/templates/manageSemester.html
+++ b/templates/manageSemester.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% if (years and semesters and minSemester and maxSemester) %}
     {% for semester in semesters %}
