--- a/templates/users.html
+++ b/templates/users.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% for user in users %}
         {% set userId = user[0] %}
