--- a/templates/addBlock.html
+++ b/templates/addBlock.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     <form method="post">
         <p>Enter name of the block</p>
