--- a/templates/addCourse.html
+++ b/templates/addCourse.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% if not semesters %}
     <p>You should add semesters first</p>
