--- a/templates/addSemester.html
+++ b/templates/addSemester.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
 
     {% if (years and minSemester and maxSemester) %}
