--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     <p>Hello it is admin panel</p>
 
