--- a/templates/manageYear.html
+++ b/templates/manageYear.html
@@ -7,6 +7,7 @@
 <body>
     {% include 'info.html' %}
     {% include 'error.html' %}
+    {% include 'adminHeader.html' %}
 
     {% if years %}
     {% for year in years %}
