replaced all delete functions with one

--- a/templates/addBlock.html
+++ b/templates/addBlock.html
@@ -11,7 +11,7 @@
 
     <form method="post">
         <p>Enter name of the block</p>
-        <input type="text" name="name"  id="name" /> <br />
+        <input type="text" autocomplete="off" name="name"  id="name" /> <br />
         <p>Pick color for the block</p>
         <input type="color" name="color" id="color" /> <br /> <br />
         <input type="submit" value="Submit" onclick="return check()">
