--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
 
     <form method="post">
         <p>Enter user name</p>
-        <input type="text" name="userName" id="userName"> <br/>
+        <input type="text" autocomplete="off" name="userName" id="userName"> <br/>
         <p>Enter password</p>
         <input type="password" name="rawPassword" id="rawPassword"> <br/>
         <p>Reenter password</p>
