--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 
     <form method="post">
         <p>Enter user name</p>
-        <input type="text" name="userName" id="userName"> <br/>
+        <input type="text" autocomplete="off" name="userName" id="userName"> <br/>
         <p>Enter password</p>
         <input type="password" name="rawPassword" id="rawPassword"> <br/>
         <input type="submit" onClick="return check()">
