Added isEnglish field for course

--- a/templates/addCourse.html
+++ b/templates/addCourse.html
@@ -58,6 +58,8 @@
         <p>Fill in teacher</p>
         <input type="text" autocomplete="off" name="teacher" id="teacher"> <br />
 
+        <input type="checkbox" name="isEnglish" id="isEnglish"> Is in English <br />
+
         <input type="submit" value="Submit" onclick="return checkCourse()">
     </form>
 
